login module functional
