# app.js
@@ -10,9 +10,10 @@
   const { Sequelize } = require('sequelize')
   const DeviceDetector = require("device-detector-js")
   const cookieParser = require('cookie-parser')
+  const bodyParser = require('body-parser')
 
   // locals
-  const { getUser, getSession } = require(join(__dirname, 'definitions', 'definitions.js'))
+  const { getUser, getSession, getRole } = require(join(__dirname, 'definitions', 'definitions.js'))
   const { encryptSHA256, formatDate } = require(join(__dirname, 'global.js'))
 
 // consts
@@ -24,28 +25,45 @@ const sequelize = new Sequelize('malkuizz', 'root', '', {
 })
 const User = getUser(sequelize)
 const Session = getSession(sequelize)
+const Role = getRole(sequelize)
 
 // module
 
 app.use(express.json())
 app.use(cors())
 app.use(cookieParser())
+app.use(bodyParser.json())
 
+// SQL associations
 User.hasMany(Session, { foreignKey: 'userID'})
 Session.belongsTo(User, { foreignKey: 'userID'})
 
+User.hasOne(Role, { foreignKey: 'roleID'})
+Role.belongsTo(User, { foreignKey: 'roleID'})
+
+
 // APP PUBLIC
+// HTML
 app.get('/', (req, res) => {
   res.sendFile(join(__dirname, 'public', 'index.html'))
 })
 .get('/public/bootstrap.min.css', (req, res) => {
   res.sendFile(join(__dirname, 'node_modules', 'bootstrap', 'dist', 'css', 'bootstrap.min.css'))
 })
+// CSS
+.get('/public/css', (req, res) => {
+  res.sendFile(join(__dirname, 'public', 'css', 'app.css'))
+})
+// JS
 .get('/public/bootstrap.min.js', (req, res) => {
   res.sendFile(join(__dirname, 'node_modules', 'bootstrap', 'dist', 'js', 'bootstrap.min.js'))
 })
 .get('/public/main.js', (req, res) => {
   res.sendFile(join(__dirname, 'public', 'main.js'))
+})
+// IMG
+.get('/public/img/malkuizz.png', (req, res) => {
+  res.sendFile(join(__dirname, 'public', 'img', 'malkuizz.png'))
 })
 
 // APP API
@@ -58,14 +76,25 @@ app.get('/api/session/:token', async function (req, res) {
     } else if (typeof req.params.token !== 'string') {
       throw new TypeError("token type error")
     }
-    const session = await Session.findOne({ where: { token: req.params.token }, include: User })
-    (session) ? res.json(session.toJSON().token) : res.status(404).json({code: "NOT_FOUND", message: "Token not available"})
+
+    const session = await Session.findOne({ 
+      where: { token: req.params.token }, 
+      include: {model: User, required: true, right: true,
+        include: {model: Role, required: true}
+      },
+      raw: true
+    })
+    console.log(session);
+
+    (session) ? res.json({"nickname": session['User.nickname'], "role": session['User.Role.roleLabel'], "isVerified": !!session['User.isVerified']}) : res.status(404).json({code: "NOT_FOUND", message: "Token not available"})
   } catch (error) {
     res.status(500).json({code: "ERROR", message: error.message})
+    console.log(error);
   }
 })
 .post('/api/login', async (req, res) => {  
   try {
+    console.log(req.body);
     if (typeof req.body === 'undefined') {
       throw new ReferenceError("no params in body")
     } else if (typeof req.body.email === 'undefined') {
@@ -79,6 +108,7 @@ app.get('/api/session/:token', async function (req, res) {
     }
 
     const user = await User.findOne({ where: { email: req.body.email, password: encryptSHA256(req.body.password) }})
+    
     if (user) {
      const token = encryptSHA256(req.body.email + formatDate(new Date))
      const deviceDetector = new DeviceDetector()
@@ -92,7 +122,7 @@ app.get('/api/session/:token', async function (req, res) {
       device: device.device.type,
       browser: device.client.name })
 
-      res.cookie('MalkuizzToken', token, { maxAge: 1000*60*60*24*30 })
+      res.cookie('Malkuizz', token, { maxAge: 1000*60*60*24*30 })
 
       res.json(token)
 
@@ -101,9 +131,15 @@ app.get('/api/session/:token', async function (req, res) {
     }
   } catch (error) {
     res.status(500).json({code: "ERROR", message: error.message})
+    console.log(error);
   }
 })
 
+// Global 404
+app.use(function(req, res) {
+  res.status(404);
+  res.json({code: "NOT_FOUND", message: 'Page not found' });
+});
 
 sequelize.authenticate().then(() => {
   console.log('Connection has been established successfully.')
